--- a/house_prices_predict.ipynb
+++ b/house_prices_predict.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:37:04.458370Z",
-     "start_time": "2025-03-02T12:37:04.445753Z"
+     "end_time": "2025-03-02T13:19:23.440576Z",
+     "start_time": "2025-03-02T13:19:23.430551Z"
     }
    },
    "cell_type": "code",
@@ -24,12 +24,12 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 5\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mscipy\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mstats\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mstats\u001B[39;00m\n\u001B[1;32m----> 5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mace_tools\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mtools\u001B[39;00m\u001B[38;5;66;03m#\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[20], line 5\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mscipy\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mstats\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mstats\u001B[39;00m\n\u001B[1;32m----> 5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mace_tools\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mtools\u001B[39;00m\u001B[38;5;66;03m#\u001B[39;00m\n",
       "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'ace_tools'"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 20
   },
   {
    "metadata": {
@@ -823,49 +823,43 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-01T20:14:07.106958Z",
-     "start_time": "2025-03-01T20:14:07.096200Z"
+     "end_time": "2025-03-02T13:19:26.986262Z",
+     "start_time": "2025-03-02T13:19:26.973267Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# if normal_test(db) > 0.95:\n",
-    "#     print(\"Use Pearson's correlation\")\n",
-    "#     print(f'Pearson correlation: {stats.pearsonr(db[\"price\"],db[\"rooms\"])[0]}')\n",
-    "# else:\n",
-    "#     print(\"Use Spearman's correlation\")\n",
-    "#     print(f'Spearman correlation: {stats.spearmanr(db[\"price\"],db[\"rooms\"])[0]} ')\n"
+    "#Depending on the p-value of the normal test, I choose the type of correlation\n",
+    "def choose_correlation_test (db,col1,col2):\n",
+    "    normal_test_result = normal_test(db)\n",
+    "    p_value_rooms = normal_test_result[\"p-value\"][\"rooms\"]\n",
+    "    p_value_price = normal_test_result[\"p-value\"][\"price\"]\n",
+    "    \n",
+    "    if p_value_rooms > 0.05 and  p_value_price > 0.05:\n",
+    "        test_name= \"Pearson\"\n",
+    "        corr, p_value = stats.pearsonr(db[col1], db[col2])\n",
+    "    else:\n",
+    "        test_name= \"Spearman\"\n",
+    "        corr, p_value = stats.spearmanr(db[col1], db[col2])\n",
+    "\n",
+    "    print(f\"Test name: {test_name}\")\n",
+    "    print(f\"Correlation: {corr:.3f}, p-value: {p_value:.5f}\")\n",
+    "    \n",
+    "choose_correlation_test(db, \"price\", \"rooms\")"
    ],
-   "id": "d08610ceafbe2dec",
+   "id": "fe243a9fceac29c0",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shapiro-Wilk test: {'Test': 'Shapiro-Wilk', 'Statistic': {'rooms': np.float64(0.9387803042759224), 'price': np.float64(0.8867187458866418)}, 'p-value': {'rooms': np.float64(3.6104457490744447e-38), 'price': np.float64(9.632741372951621e-48)}}\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'dict' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[48], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mnormal_test\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdb\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m>\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.95\u001B[39;49m:\n\u001B[0;32m      2\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUse Pearson\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms correlation\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      3\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPearson correlation: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mstats\u001B[38;5;241m.\u001B[39mpearsonr(db[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mprice\u001B[39m\u001B[38;5;124m\"\u001B[39m],db[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrooms\u001B[39m\u001B[38;5;124m\"\u001B[39m])[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[1;31mTypeError\u001B[0m: '>' not supported between instances of 'dict' and 'float'"
+      "Shapiro-Wilk test: {'Test': 'Shapiro-Wilk', 'Statistic': {'rooms': np.float64(0.9387803042759224), 'price': np.float64(0.8867187458866418)}, 'p-value': {'rooms': np.float64(3.6104457490744447e-38), 'price': np.float64(9.632741372951621e-48)}}\n",
+      "Test name: Spearman\n",
+      "Correlation: 0.438, p-value: 0.00000\n"
      ]
     }
    ],
-   "execution_count": 48
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "e6c31dacf44d03a"
+   "execution_count": 21
   }
  ],
  "metadata": {
