--- a/house_prices_predict.ipynb
+++ b/house_prices_predict.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T13:19:23.440576Z",
-     "start_time": "2025-03-02T13:19:23.430551Z"
+     "end_time": "2025-03-10T19:56:21.417653Z",
+     "start_time": "2025-03-10T19:56:21.415667Z"
     }
    },
    "cell_type": "code",
@@ -13,29 +13,17 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as stats\n",
-    "import ace_tools as tools#\n"
+    "\n"
    ],
    "id": "1608cf26d2413caf",
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ace_tools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[20], line 5\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mscipy\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mstats\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mstats\u001B[39;00m\n\u001B[1;32m----> 5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mace_tools\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mtools\u001B[39;00m\u001B[38;5;66;03m#\u001B[39;00m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'ace_tools'"
-     ]
-    }
-   ],
-   "execution_count": 20
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:37:07.826107Z",
-     "start_time": "2025-03-02T12:37:07.803530Z"
+     "end_time": "2025-03-10T19:56:23.575061Z",
+     "start_time": "2025-03-10T19:56:23.556386Z"
     }
    },
    "cell_type": "code",
@@ -221,18 +209,18 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:37:10.808214Z",
-     "start_time": "2025-03-02T12:37:10.797152Z"
+     "end_time": "2025-03-10T19:56:49.572667Z",
+     "start_time": "2025-03-10T19:56:49.563978Z"
     }
    },
    "cell_type": "code",
@@ -604,18 +592,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:37:25.636250Z",
-     "start_time": "2025-03-02T12:37:25.633835Z"
+     "end_time": "2025-03-10T19:56:54.418499Z",
+     "start_time": "2025-03-10T19:56:54.416204Z"
     }
    },
    "cell_type": "code",
@@ -630,8 +618,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:38:07.943075Z",
-     "start_time": "2025-03-02T12:38:07.735395Z"
+     "end_time": "2025-03-10T19:56:58.351646Z",
+     "start_time": "2025-03-10T19:56:58.188096Z"
     }
    },
    "cell_type": "code",
@@ -653,13 +641,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:38:05.447303Z",
-     "start_time": "2025-03-02T12:38:05.443131Z"
+     "end_time": "2025-03-10T19:57:01.059794Z",
+     "start_time": "2025-03-10T19:57:01.055310Z"
     }
    },
    "cell_type": "code",
@@ -684,8 +672,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:38:12.693621Z",
-     "start_time": "2025-03-02T12:38:12.687250Z"
+     "end_time": "2025-03-10T19:57:06.268529Z",
+     "start_time": "2025-03-10T19:57:06.264958Z"
     }
    },
    "cell_type": "code",
@@ -698,13 +686,13 @@
    ],
    "id": "612d7623580cca6b",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:38:18.147836Z",
-     "start_time": "2025-03-02T12:38:18.055063Z"
+     "end_time": "2025-03-10T19:57:08.494882Z",
+     "start_time": "2025-03-10T19:57:08.408024Z"
     }
    },
    "cell_type": "code",
@@ -725,13 +713,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T12:38:30.656872Z",
-     "start_time": "2025-03-02T12:38:30.652694Z"
+     "end_time": "2025-03-10T19:58:38.527758Z",
+     "start_time": "2025-03-10T19:58:38.523313Z"
     }
    },
    "cell_type": "code",
@@ -740,7 +728,7 @@
     "_,price_shapiro = stats.shapiro(db[\"price\"])\n",
     "_,rooms_shapiro = stats.shapiro(db[\"rooms\"])\n",
     "\n",
-    "# If sample has more than 5000 observations i should take test D’Agostino-Pearson. Otherwise, the shapiro test will be the best choice.\n",
+    "# If sample has more than 5000 observations I should take test D’Agostino-Pearson (normal test). Otherwise, the shapiro test will be the best choice.\n",
     "def normal_test(db):\n",
     "    if db[\"price\"].count() >=5000:\n",
     "        stat_rooms, p_rooms= stats.normaltest(db[\"rooms\"])#[0]\n",
@@ -782,8 +770,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-01T20:20:14.099898Z",
-     "start_time": "2025-03-01T20:20:14.096753Z"
+     "end_time": "2025-03-10T19:59:04.956064Z",
+     "start_time": "2025-03-10T19:59:04.952137Z"
     }
    },
    "cell_type": "code",
@@ -801,7 +789,7 @@
     "print(f\"{'-'*50}\")\n",
     "\n",
     "for index, row in df_normal_test.iterrows():\n",
-    "    print(f\"{row['Zmienna']:<10}{row['Statystyka']:<20.5f}{row['p-value']:<20.5e}\")"
+    "    print(f\"{row['Variables']:<10}{row['Statistic']:<20.5f}{row['p-value']:<20.5e}\")"
    ],
    "id": "c817e48df8e2b318",
    "outputs": [
@@ -810,15 +798,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " Wyniki testu normalności:\n",
-      "Zmienna   Statystyka          p-value             \n",
+      " Results for normal test:\n",
+      "Variable  Statistic           p-value             \n",
       "--------------------------------------------------\n",
       "rooms     0.93878             3.61045e-38         \n",
       "price     0.88672             9.63274e-48         \n"
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 14
   },
   {
    "metadata": {
