--- a/house_prices_predict.ipynb
+++ b/house_prices_predict.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:56:21.417653Z",
-     "start_time": "2025-03-10T19:56:21.415667Z"
+     "end_time": "2025-03-10T20:32:11.981803Z",
+     "start_time": "2025-03-10T20:32:11.978833Z"
     }
    },
    "cell_type": "code",
@@ -13,17 +13,17 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as stats\n",
-    "\n"
+    "import seaborn as sns\n"
    ],
    "id": "1608cf26d2413caf",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 51
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:56:23.575061Z",
-     "start_time": "2025-03-10T19:56:23.556386Z"
+     "end_time": "2025-03-10T20:32:12.006994Z",
+     "start_time": "2025-03-10T20:32:11.983385Z"
     }
    },
    "cell_type": "code",
@@ -209,18 +209,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:56:49.572667Z",
-     "start_time": "2025-03-10T19:56:49.563978Z"
+     "end_time": "2025-03-10T20:32:12.023831Z",
+     "start_time": "2025-03-10T20:32:12.008104Z"
     }
    },
    "cell_type": "code",
@@ -592,18 +592,18 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 53
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:56:54.418499Z",
-     "start_time": "2025-03-10T19:56:54.416204Z"
+     "end_time": "2025-03-10T20:32:12.029344Z",
+     "start_time": "2025-03-10T20:32:12.025650Z"
     }
    },
    "cell_type": "code",
@@ -613,13 +613,13 @@
    ],
    "id": "4566e1fdb567780",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 54
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:56:58.351646Z",
-     "start_time": "2025-03-10T19:56:58.188096Z"
+     "end_time": "2025-03-10T20:32:12.215281Z",
+     "start_time": "2025-03-10T20:32:12.030888Z"
     }
    },
    "cell_type": "code",
@@ -641,13 +641,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:57:01.059794Z",
-     "start_time": "2025-03-10T19:57:01.055310Z"
+     "end_time": "2025-03-10T20:32:12.222690Z",
+     "start_time": "2025-03-10T20:32:12.216582Z"
     }
    },
    "cell_type": "code",
@@ -662,18 +662,18 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 56
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:57:06.268529Z",
-     "start_time": "2025-03-10T19:57:06.264958Z"
+     "end_time": "2025-03-10T20:32:12.230652Z",
+     "start_time": "2025-03-10T20:32:12.224709Z"
     }
    },
    "cell_type": "code",
@@ -686,13 +686,13 @@
    ],
    "id": "612d7623580cca6b",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:57:08.494882Z",
-     "start_time": "2025-03-10T19:57:08.408024Z"
+     "end_time": "2025-03-10T20:32:12.414987Z",
+     "start_time": "2025-03-10T20:32:12.232045Z"
     }
    },
    "cell_type": "code",
@@ -713,13 +713,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 58
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:58:38.527758Z",
-     "start_time": "2025-03-10T19:58:38.523313Z"
+     "end_time": "2025-03-10T20:32:12.423508Z",
+     "start_time": "2025-03-10T20:32:12.416563Z"
     }
    },
    "cell_type": "code",
@@ -765,13 +765,13 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 59
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T19:59:04.956064Z",
-     "start_time": "2025-03-10T19:59:04.952137Z"
+     "end_time": "2025-03-10T20:32:12.432931Z",
+     "start_time": "2025-03-10T20:32:12.426244Z"
     }
    },
    "cell_type": "code",
@@ -781,7 +781,9 @@
     "    \"Variables\": [\"rooms\", \"price\"],\n",
     "    \"Statistic\": [result[\"Statistic\"][\"rooms\"], result[\"Statistic\"][\"price\"]],\n",
     "    \"p-value\": [result[\"p-value\"][\"rooms\"], result[\"p-value\"][\"price\"]]\n",
-    "})\n",
+    "}\n",
+    "\n",
+    ")\n",
     "\n",
     "\n",
     "print(\"\\n Results for normal test:\")\n",
@@ -806,13 +808,13 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 60
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T13:19:26.986262Z",
-     "start_time": "2025-03-02T13:19:26.973267Z"
+     "end_time": "2025-03-10T20:32:12.444320Z",
+     "start_time": "2025-03-10T20:32:12.434783Z"
     }
    },
    "cell_type": "code",
@@ -824,14 +826,19 @@
     "    p_value_price = normal_test_result[\"p-value\"][\"price\"]\n",
     "    \n",
     "    if p_value_rooms > 0.05 and  p_value_price > 0.05:\n",
-    "        test_name= \"Pearson\"\n",
     "        corr, p_value = stats.pearsonr(db[col1], db[col2])\n",
+    "        test_name= \"Pearson\"\n",
     "    else:\n",
-    "        test_name= \"Spearman\"\n",
     "        corr, p_value = stats.spearmanr(db[col1], db[col2])\n",
+    "        test_name= \"Spearman\"\n",
+    "    result= {\n",
+    "        \"Test\": test_name,\n",
+    "        \"Statistic\": {\"rooms\": p_value_rooms, \"price\": p_value_rooms},\n",
+    "        \"p-value\": {\"rooms\": p_value_price, \"price\": p_value_price}\n",
+    "    }\n",
     "\n",
     "    print(f\"Test name: {test_name}\")\n",
-    "    print(f\"Correlation: {corr:.3f}, p-value: {p_value:.5f}\")\n",
+    "    print(f\"Statistic: {corr:.3f}, p-value: {p_value:.5f}\")\n",
     "    \n",
     "choose_correlation_test(db, \"price\", \"rooms\")"
    ],
@@ -843,11 +850,259 @@
      "text": [
       "Shapiro-Wilk test: {'Test': 'Shapiro-Wilk', 'Statistic': {'rooms': np.float64(0.9387803042759224), 'price': np.float64(0.8867187458866418)}, 'p-value': {'rooms': np.float64(3.6104457490744447e-38), 'price': np.float64(9.632741372951621e-48)}}\n",
       "Test name: Spearman\n",
-      "Correlation: 0.438, p-value: 0.00000\n"
+      "Statistic: 0.438, p-value: 0.00000\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 61
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-10T20:32:12.451105Z",
+     "start_time": "2025-03-10T20:32:12.446083Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# vizualization results from correlation \n",
+    "df_normal_test = pd.DataFrame({\n",
+    "    \"Test name\": [\"rooms\", \"price\"],\n",
+    "    \"Statistic\": [result[\"Statistic\"][\"rooms\"], result[\"Statistic\"][\"price\"]],\n",
+    "    \"p-value\": [result[\"p-value\"][\"rooms\"], result[\"p-value\"][\"price\"]]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "print(\"\\n Statistic test:\")\n",
+    "print(f\"{'Variable':<10}{'Correlation':<20}{'p-value':<20}\")\n",
+    "print(f\"{'-'*50}\")\n",
+    "\n",
+    "for index, row in df_normal_test.iterrows():\n",
+    "    print(f\"{row['Test name']:<10}{row['Statistic']:<20.5f}{row['p-value']:<20.5e}\")"
+   ],
+   "id": "5f5d19c79e0c5f8d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Statistic test:\n",
+      "Variable  Correlation         p-value             \n",
+      "--------------------------------------------------\n",
+      "rooms     0.93878             3.61045e-38         \n",
+      "price     0.88672             9.63274e-48         \n"
+     ]
+    }
+   ],
+   "execution_count": 62
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-10T20:32:12.461702Z",
+     "start_time": "2025-03-10T20:32:12.452489Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#add third variable - street\n",
+    "db = db[[\"rooms\",\"price\",'city']]\n",
+    "db "
+   ],
+   "id": "fc59dc7ca6bcabc6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      rooms     price          city\n",
+       "0       5.0  376000.0       Seattle\n",
+       "1       7.0  800000.0     Carnation\n",
+       "3       5.0  324000.0       Seattle\n",
+       "4       8.0  549900.0       Seattle\n",
+       "5       5.0  320000.0  Maple Valley\n",
+       "...     ...       ...           ...\n",
+       "4135    5.0  308167.0       Seattle\n",
+       "4136    5.0  534333.0      Bellevue\n",
+       "4137    5.0  416904.0        Renton\n",
+       "4138    6.0  203400.0       Seattle\n",
+       "4139    5.0  220600.0     Covington\n",
+       "\n",
+       "[4098 rows x 3 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>price</th>\n",
+       "      <th>city</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>376000.0</td>\n",
+       "      <td>Seattle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>800000.0</td>\n",
+       "      <td>Carnation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>324000.0</td>\n",
+       "      <td>Seattle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>549900.0</td>\n",
+       "      <td>Seattle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>320000.0</td>\n",
+       "      <td>Maple Valley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4135</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>308167.0</td>\n",
+       "      <td>Seattle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4136</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>534333.0</td>\n",
+       "      <td>Bellevue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4137</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>416904.0</td>\n",
+       "      <td>Renton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4138</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>203400.0</td>\n",
+       "      <td>Seattle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4139</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>220600.0</td>\n",
+       "      <td>Covington</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4098 rows × 3 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 63
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-10T20:32:16.167717Z",
+     "start_time": "2025-03-10T20:32:16.157098Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# plt.figure(figsize= (15,6))\n",
+    "# sns.boxplot(x=\"city\" , y=\"price\", hue=\"rooms\", palette =\"coolwarm\", data=db)\n",
+    "# plt.title(\"Cena mieszkań w różnych ulicach w zależności od liczby pokoi\")\n",
+    "# plt.xlabel(\"Ulica\")\n",
+    "# plt.ylabel(\"Cena\")\n",
+    "# plt.show()"
+   ],
+   "id": "aaa9b3be4c0e7003",
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Axes' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[65], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m plt\u001B[38;5;241m.\u001B[39mfigure(figsize\u001B[38;5;241m=\u001B[39m (\u001B[38;5;241m15\u001B[39m,\u001B[38;5;241m6\u001B[39m))\n\u001B[1;32m----> 2\u001B[0m \u001B[43msns\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mboxplot\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mcity\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m \u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mprice\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mhue\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mrooms\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpalette\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mcoolwarm\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdata\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdb\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m plt\u001B[38;5;241m.\u001B[39mtitle(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCena mieszkań w różnych ulicach w zależności od liczby pokoi\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      4\u001B[0m plt\u001B[38;5;241m.\u001B[39mxlabel(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUlica\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'Axes' object is not callable"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1500x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-10T20:33:36.667217Z",
+     "start_time": "2025-03-10T20:33:36.663793Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(sns.boxplot)",
+   "id": "d344ca36b8af7f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Axes(0.125,0.11;0.775x0.77)\n"
+     ]
+    }
+   ],
+   "execution_count": 66
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "a25b743173b523d",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
